<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:contentPadding="10dp"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civClientProfile"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/fastport_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvClientdata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/client_data"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/lugar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvNametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/name_tv"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvClientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/name_client"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvFromtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/from_tv"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvTotext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/to_tv"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvTypeServiceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/service_tv"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvTypeService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/type_service"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/destino"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp" />

</androidx.cardview.widget.CardView>
